--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Login Activity</string>
+    <string name="app_name">LPDM Expanded</string>
     <string name="login">Login</string>
     <string name="ldpm_expanded">LDPM Expanded</string>
     <string name="create_an_account">Create an Account</string>
@@ -12,4 +12,8 @@
     <string name="mPrefs">MyPrefs</string>
     <string name="user_info">user_info</string>
     <string name="admin">Admin</string>
+    <string name="back">Back</string>
+    <string name="grant_admin">Grant Admin</string>
+    <string name="revoke_admin">Revoke Admin</string>
+    <string name="admin_page">Admin Page</string>
 </resources>
